--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -307,16 +300,17 @@
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <!-- <h3 class="resume-title">Madang Racing Team (MDRT)</h3>
+            <h3 class="resume-title">Madang Racing Team (MDRT)</h3>
             <div class="resume-item">
               <h5>Mekanik Otomotif</h5>
-              <p><em>Tanggal</em></p>
-              <p><em>Ciputat, Tangerang Selatan</em></p>
+              <p><em>2020-2023</em></p>
+              <p><em>Pamulang, Tangerang Selatan</em></p>
               <p>Madang Racing Team adalah bengkel otomotif roda dua yang menyediakan layanan perbaikan dan perawatan kendaraan bermotor. Selama saya di bengkel saya bekerja sebagai berikut.</p>
               <ul>
-                <li>Memperbaiki kerusakan kendaraan dan menginput data customer</li>
+                <li>Bertanggung jawab dalam memperbaiki kerusakan kendaraan</li>
+                <li>Mengelola dan menginput data customer dengan tepat dan akurat</li>
               </ul>
-            </div> -->
+            </div>
             <!-- Edn Resume Item -->
           </div>
 
