--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Rendy Martin</h2>
-        <p>I'm <span class="typed" data-typed-items="Fresh Graduate, UI/UX Designer, Frontend Developer,"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Fresh Graduate, UI/UX Designer, Frontend Developer, Admin"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
