--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Rendy Martin</h2>
-        <p>I'm <span class="typed" data-typed-items="Fresh Graduate, UI/UX Designer, Frontend Developer, Admin"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Fresh Graduate, UI/UX Designer, Frontend Developer, Administrasi"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -102,7 +102,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Tentang</h2>
-        <p>Saya biasa dipanggil martin. Lulusan S1 jurusan Teknologi Informasi dari Bina Sarana Informatika dengan IPK 3.68/4.00. Selain itu saya memiliki minat yang kuat dalam Frontend Developer, UI/UX Designer, dan Admin. Saya memiliki keterampilan dasar dalam menggunakan bahasa pemograman atau framework seperti HTML, CSS, PHP, MySql, Bootstrap, Codeigniter dan Laravel. Serta pengalaman saya menjadi it programmer di Jakarta Creative Hub. Saya juga dikenal dengan pribadi yang aktif, mudah beradaptasi, komunikasi, bertanggung jawab, cepat mempelajari teknologi baru, manajemen waktu, dan kerja sama tim. Saya mencari peluang karier yang memberikan ruang untuk berkembang menuju karier profesional.</p>
+        <p>Saya biasa dipanggil martin. Lulusan S1 jurusan Teknologi Informasi dari Bina Sarana Informatika dengan IPK 3.68/4.00. Selain itu saya memiliki minat yang kuat dalam Frontend Developer, UI/UX Designer, dan Administrasi. Saya juga menguasai keterampilan dasar software seperti Microsoft Office (Exel, Power Point, Word) HTML, CSS, PHP, MySql, Bootstrap, Codeigniter dan Laravel. Serta pengalaman saya menjadi it programmer di Jakarta Creative Hub. Saya juga dikenal dengan pribadi yang aktif, mudah beradaptasi, komunikasi, bertanggung jawab, cepat mempelajari teknologi baru, manajemen waktu, dan kerja sama tim. Saya mencari peluang karier yang memberikan ruang untuk berkembang menuju karier profesional.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -112,9 +112,9 @@
             <img src="assets/img/my-profile-img-2.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Fresh Graduate | UI/UX Designer | Frontend Developer | Admin</h2>
+            <h2>Fresh Graduate | UI/UX Designer | Frontend Developer | Administrasi</h2>
             <p class="fst-italic py-3">
-              Saya memiliki ketertarikan besar dalam dunia UI/UX, pengembangan frontend, serta admin. Saya selalu berusaha menciptakan tampilan antarmuka yang intuitif, modern, dan mudah digunakan, serta mengutamakan pengalaman pengguna dalam setiap proses desain maupun pengembangan.
+              Saya memiliki ketertarikan besar dalam dunia UI/UX, pengembangan frontend, serta administrasi. Saya selalu berusaha menciptakan tampilan antarmuka yang intuitif, modern, dan mudah digunakan, serta mengutamakan pengalaman pengguna dalam setiap proses desain maupun pengembangan.
             </p>
             <div class="row">
               <div class="col-lg-6">
